group 'de.kaleidox'
name "CrystalShard-Internal-11"
version '0.8'

apply plugin: 'java-library'
apply plugin: 'maven-publish'

sourceCompatibility = 11
targetCompatibility = 11

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.incremental = true
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

repositories {
    jcenter()
}

dependencies {
    module 'de.kaleidox:CrystalShard-Main:release.latest'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
    implementation 'com.vdurmont:emoji-java:4.0.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
